--- a/app/assets/stylesheets/featured.css
+++ b/app/assets/stylesheets/featured.css
@@ -236,7 +236,7 @@
 .guide_show .column:hover{box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.2), 0 2px 10px 0 rgba(0, 0, 0, 0.2); cursor: pointer; }
 .guide_show .column img{width:100%;height:260px;object-fit:cover;}
 /* The Modal (background) */
-.guide_show .modal{background-color: white;position: fixed;left: 0;top: -500%; height: 100%;width: 100%;transition: top 0.6s ease-in-out;}
+.guide_show .modal{overflow:scroll;background-color: white;position: fixed;left: 0;top: -500%; height: 100%;width: 100%;transition: top 0.6s ease-in-out;}
 /*Display Modal Content when clicking on either <img> or div.column*/
 .guide_show .show{top:0;}
 /* Modal Content */
@@ -276,7 +276,7 @@
   .guide_show .flex{display:block;align-items:center;justify-content:center;}
   .guide_show .column{width:48%;}
   .guide_show .column:hover{box-shadow: 0 0 0;}
-  .guide_show .column img{width:100%;height:200px;object-fit:cover;}
+  .guide_show .column img{width:100%;height:150px;object-fit:cover;}
   .guide_show .modal-content{margin:50px auto 0 auto;}
   .guide_show .slides {height: 100%; width: 100%; position: absolute;left: 0; right: 0; transition: opacity 0.9s; z-index: 1;}
   .guide_show .slides .img_box{float:none;width:100%;height:auto;margin-right:0;margin-top:50px;}
