guide for tablet

--- a/app/views/guides/gift_guide_03.html.erb
+++ b/app/views/guides/gift_guide_03.html.erb
@@ -69,7 +69,7 @@
             <strong>BY AMAZON</strong>
             <em>$100.00</em>
             <p>$70.00 (30% OFF)</p>
-            <span>Check it Out at <a href="#n">Amazon</a></span>
+            <a href="#n">Check it Out at <span>Amazon</span></a>
           </div>
         </div>
 
@@ -83,7 +83,7 @@
             <strong>BY AMAZON</strong>
             <em>$100.00</em>
             <p>$70.00 (30% OFF)</p>
-            <span>Check it Out at <a href="#n">Amazon</a></span>
+            <a href="#n">Check it Out at <span>Amazon</span></a>
           </div>
         </div>
 
@@ -97,7 +97,7 @@
             <strong>BY AMAZON</strong>
             <em>$100.00</em>
             <p>$70.00 (30% OFF)</p>
-            <span>Check it Out at <a href="#n">Amazon</a></span>
+            <a href="#n">Check it Out at <span>Amazon</span></a>
           </div>
         </div>
         
@@ -111,7 +111,7 @@
             <strong>BY AMAZON</strong>
             <em>$100.00</em>
             <p>$70.00 (30% OFF)</p>
-            <span>Check it Out at <a href="#n">Amazon</a></span>
+            <a href="#n">Check it Out at <span>Amazon</span></a>
           </div>
         </div>
 
@@ -125,7 +125,7 @@
             <strong>BY AMAZON</strong>
             <em>$100.00</em>
             <p>$70.00 (30% OFF)</p>
-            <span>Check it Out at <a href="#n">Amazon</a></span>
+            <a href="#n">Check it Out at <span>Amazon</span></a>
           </div>
         </div>
 
