--- a/app/assets/stylesheets/featured.css
+++ b/app/assets/stylesheets/featured.css
@@ -250,11 +250,11 @@
 .guide_show .slides .img_box img{width:100%;height:100%;object-fit:contain;}
 .guide_show .slides .inner{float:left;width:46%;margin-top:-200px;}
 .guide_show .slides .inner h2{line-height:1.2;font-weight:300;}
-.guide_show .slides .inner strong{font-size:14px;color:#ccc;}
+.guide_show .slides .inner strong{font-size:14px;color:#ccc;font-weight:100;}
 .guide_show .slides .inner em{display:block;margin-top:20px;font-weight:bold;font-size:20px;text-decoration:line-through;}
 .guide_show .slides .inner p{font-weight:bold;font-size:20px;display:block;margin-bottom:50px;}
-.guide_show .slides .inner span{background:#000;color:#fff;padding:20px 40px;margin-top:30px;font-weight:bold;}
-.guide_show .slides .inner span a{text-decoration:none;color:#08f;margin-left:5px;}
+.guide_show .slides .inner a {text-decoration:none;background:#000;color:#fff;padding:20px 40px;margin-top:30px;font-weight:bold;}
+.guide_show .slides .inner a span{color:#08f;margin-left:5px;}
 /*In next/previous slides, we change opacity*/
 .guide_show .hide {opacity: 0; z-index: -1;}
 .guide_show .pop {opacity: 1; z-index: 1;}
@@ -274,66 +274,29 @@
   .guide_header{margin:80px 0 20px 0;}
   .guide_header h2{font-size:25px;width:100%;}
   .guide_show .flex{display:block;align-items:center;justify-content:center;}
-  .guide_show .column{width:48%;}
+  .guide_show .column{width:48%;box-shadow:-1px 6px 8px rgba(0, 0, 0, 0.1)}
   .guide_show .column:hover{box-shadow: 0 0 0;}
-  .guide_show .column img{width:100%;height:150px;object-fit:cover;}
+  .guide_show .column img{width:100%;height:150px;object-fit:cover;border-radius:10px;}
   .guide_show .modal-content{margin:50px auto 0 auto;}
-  .guide_show .slides {height: 100%; width: 100%; position: absolute;left: 0; right: 0; transition: opacity 0.9s; z-index: 1;}
   .guide_show .slides .img_box{float:none;width:100%;height:auto;margin-right:0;margin-top:50px;}
-  .guide_show .slides .img_box img{width:100%;height:auto;object-fit:contain;}
-  .guide_show .slides .inner{float:none;width:100%;margin-top:50px;}
-  .guide_show .slides .inner h2{line-height:1.2;font-weight:300;}
-  .guide_show .slides .inner strong{font-size:14px;color:#ccc;}
-  .guide_show .slides .inner em{display:block;margin-top:20px;font-weight:bold;font-size:20px;text-decoration:line-through;}
-  .guide_show .slides .inner p{font-weight:bold;font-size:20px;display:block;margin-bottom:50px;}
-  .guide_show .slides .inner span{background:#000;color:#fff;padding:20px 40px;margin-top:30px;font-weight:bold;}
-  .guide_show .slides .inner span a{text-decoration:none;color:#08f;margin-left:5px;}
-  /*In next/previous slides, we change opacity*/
-  .guide_show .hide {opacity: 0; z-index: -1;}
-  .guide_show .pop {opacity: 1; z-index: 1;}
-  .guide_show .cursor {cursor: pointer}
-  /* Next & previous buttons */
+  .guide_show .slides .inner{float:none;width:100%;margin-top:20px;}
+  .guide_show .slides .inner em{margin-top:10px;}
+  .guide_show .slides .inner p{margin-bottom:30px;}
+  .guide_show .slides .inner span{padding:10px 20px;margin-top:30px;}
+}
+@media screen and (min-width:641px) and (max-width:1199px){
+  .guide_header{margin:70px 0 20px 0;}
+  .guide_header h2{font-size:40px;width:65%;}
+  .guide_show .column{float:left;width:31%;}
+  .guide_show .column img{height:200px;}
+  .guide_show .modal-content{margin:70px auto 0 auto;}
+  .guide_show .slides .img_box{margin-top:-650px;}
+  .guide_show .slides .inner{margin-top:-650px;}
+  .guide_show .slides .inner strong{font-size:14px;color:#ccc;font-weight:100;}
+  .guide_show .slides .inner p{margin-bottom:40px;}
+  .guide_show .slides .inner a{padding:10px 30px;}
   .guide_show .prev,
-  .guide_show .next{background-color: rgba(0,0,0,0.4);  color: white; cursor: pointer;position: absolute;top: 35%; padding: 16px;font-weight: 700;font-size: 20px;transition: 0.6s ease;border-radius: 0 3px 3px 0;user-select: none;-webkit-user-select: none;z-index: 1;}
-  /* Position the "next button" to the right */
-  .guide_show .next {right: 0;border-radius: 3px 0 0 3px;}
-  /* On hover, add a black background color with a little bit see-through */
-  .guide_show .prev:hover,
-  .guide_show .next:hover {background-color: rgba(0,0,0,0.9);}
-  /* Number text (1/3 etc) */
-  .guide_show .numbering {color: black;font-size: 18px;padding: 8px 12px;position: absolute;top: 0; width: 100%; text-align: center;}
-}
-
-
-@media screen and (max-width: 780px) {
-  .column {
-    margin: 5px;
-    width: 45%; 
-  }
-
-  .slides img {
-    max-height: 100%; 
-    max-width: 100%; 
-  }
-}
-
-@media screen and (max-width: 480px) {
-  .column {
-    margin: 5px;
-    width: 100%; 
-  }
-
-  .modal-content {
-    width: 100%; 
-  }
-
-  .prev,
-  .next {
-    padding: 4px 10px;
-    font-size: 18px;
-  }
-}
-
+  .guide_show .next{top: 15%;}}
 
 
 /* Begin Gift Guide Detail Page */
