--- a/app/assets/stylesheets/featured.css
+++ b/app/assets/stylesheets/featured.css
@@ -230,8 +230,8 @@
 .guide_show .group:before,
 .guide_show .group:after{content:'';display:block;}
 .guide_show .group:after{clear:both;}
-.guide_show .flex{display:flex;align-items:center;justify-content:center;}
-.guide_show .guide_show_wrap{flex-wrap:wrap;}
+/*.guide_show .flex{display:flex;align-items:center;justify-content:center;}
+.guide_show .guide_show_wrap{flex-wrap:wrap;}*/
 .guide_show .column{float:left;width:23%;margin:1%;transition:0.3s;}
 .guide_show .column:hover{box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.2), 0 2px 10px 0 rgba(0, 0, 0, 0.2); cursor: pointer; }
 .guide_show .column img{width:100%;height:260px;object-fit:cover;}
@@ -246,22 +246,23 @@
 .guide_show .close:hover,
 .guide_show .close:focus {color: #999;cursor: pointer;text-decoration: none;}
 .guide_show .slides {height: 100%; width: 100%; position: absolute;left: 0; right: 0; transition: opacity 0.9s; z-index: 1;}
-.guide_show .slides .img_box{float:left;width:33%;height:300px;margin-right:2%;margin-top:-150px;}
-.guide_show .slides .img_box img{width:100%;height:100%;object-fit:contain;}
-.guide_show .slides .inner{float:left;width:46%;margin-top:-200px;}
-.guide_show .slides .inner h2{line-height:1.2;font-weight:300;}
-.guide_show .slides .inner strong{font-size:14px;color:#ccc;font-weight:100;}
-.guide_show .slides .inner em{display:block;margin-top:20px;font-weight:bold;font-size:20px;text-decoration:line-through;}
-.guide_show .slides .inner p{font-weight:bold;font-size:20px;display:block;margin-bottom:50px;}
-.guide_show .slides .inner a {text-decoration:none;background:#000;color:#fff;padding:20px 40px;margin-top:30px;font-weight:bold;}
-.guide_show .slides .inner a span{color:#08f;margin-left:5px;}
+.guide_show .slides .inner_wrap{margin-top:270px;}
+.guide_show .slides .inner_wrap .img_box{float:left;width:45%;height:300px;margin:-150px 3% 0 2%}
+.guide_show .slides .inner_wrap .img_box img{width:100%;height:100%;object-fit:contain;}
+.guide_show .slides .inner_wrap .inner{float:left;width:46%;margin-top:-150px;}
+.guide_show .slides .inner_wrap .inner h2{line-height:1.2;font-weight:300;}
+.guide_show .slides .inner_wrap .inner strong{font-size:14px;color:#ccc;font-weight:100;}
+.guide_show .slides .inner_wrap .inner em{display:block;margin-top:20px;font-weight:bold;font-size:20px;text-decoration:line-through;}
+.guide_show .slides .inner_wrap .inner p{font-weight:bold;font-size:20px;display:block;margin-bottom:50px;}
+.guide_show .slides .inner_wrap .inner a {text-decoration:none;background:#000;color:#fff;padding:20px 40px;margin-top:30px;font-weight:bold;}
+.guide_show .slides .inner_wrap .inner a span{color:#08f;margin-left:5px;}
 /*In next/previous slides, we change opacity*/
 .guide_show .hide {opacity: 0; z-index: -1;}
 .guide_show .pop {opacity: 1; z-index: 1;}
 .guide_show .cursor {cursor: pointer}
 /* Next & previous buttons */
 .guide_show .prev,
-.guide_show .next{background-color: rgba(0,0,0,0.4);  color: white; cursor: pointer;position: absolute;top: 35%; padding: 16px;font-weight: 700;font-size: 20px;transition: 0.6s ease;border-radius: 0 3px 3px 0;user-select: none;-webkit-user-select: none;z-index: 1;}
+.guide_show .next{background-color: rgba(0,0,0,0.4);  color: white; cursor: pointer;position: absolute;margin-top:20%;padding: 16px;font-weight: 700;font-size: 20px;transition: 0.6s ease;border-radius: 0 3px 3px 0;user-select: none;-webkit-user-select: none;z-index: 1;}
 /* Position the "next button" to the right */
 .guide_show .next {right: 0;border-radius: 3px 0 0 3px;}
 /* On hover, add a black background color with a little bit see-through */
@@ -278,25 +279,18 @@
   .guide_show .column:hover{box-shadow: 0 0 0;}
   .guide_show .column img{width:100%;height:150px;object-fit:cover;border-radius:10px;}
   .guide_show .modal-content{margin:50px auto 0 auto;}
-  .guide_show .slides .img_box{float:none;width:100%;height:auto;margin-right:0;margin-top:50px;}
-  .guide_show .slides .inner{float:none;width:100%;margin-top:20px;}
-  .guide_show .slides .inner em{margin-top:10px;}
-  .guide_show .slides .inner p{margin-bottom:30px;}
-  .guide_show .slides .inner span{padding:10px 20px;margin-top:30px;}
+  .guide_show .slides .inner_wrap .img_box{float:none;width:100%;height:auto;margin:0;margin-top:-200px;}
+  .guide_show .slides .inner_wrap .inner{float:none;width:100%;margin-top:20px;}
+  .guide_show .slides .inner_wrap .inner em{margin-top:10px;}
+  .guide_show .slides .inner_wrap .inner p{margin-bottom:30px;}
+  .guide_show .slides .inner_wrap .inner a {text-decoration:none;background:#000;color:#fff;padding:10px 25px;margin-top:30px;font-weight:bold;}
+  .guide_show .prev, .guide_show .next{margin:60% -8% 0 -8%;}
 }
 @media screen and (min-width:641px) and (max-width:1199px){
-  .guide_header{margin:70px 0 20px 0;}
-  .guide_header h2{font-size:40px;width:65%;}
-  .guide_show .column{float:left;width:31%;}
-  .guide_show .column img{height:200px;}
-  .guide_show .modal-content{margin:70px auto 0 auto;}
-  .guide_show .slides .img_box{margin-top:-650px;}
-  .guide_show .slides .inner{margin-top:-650px;}
-  .guide_show .slides .inner strong{font-size:14px;color:#ccc;font-weight:100;}
-  .guide_show .slides .inner p{margin-bottom:40px;}
-  .guide_show .slides .inner a{padding:10px 30px;}
-  .guide_show .prev,
-  .guide_show .next{top: 15%;}}
+ 
+ 
+}
+
 
 
 /* Begin Gift Guide Detail Page */
