--- a/app/views/guides/gift_guide_03.html.erb
+++ b/app/views/guides/gift_guide_03.html.erb
@@ -21,59 +21,140 @@
         <img src="https://images-na.ssl-images-amazon.com/images/I/616sJVZ0ixL._SX679_.jpg">
       </div>
       <div class="flex column" onclick="currentSlide(2)">
-        <img src="https://www.skyfloatx.com/uploads/1/2/4/6/124665177/2_2_orig.jpg">
+        <img src="https://images-na.ssl-images-amazon.com/images/I/61WhgoU4LzL._SX679_.jpg">
       </div>
       <div class="flex column" onclick="currentSlide(3)">
         <img src="https://images-na.ssl-images-amazon.com/images/I/71ld5uSFhQL._SX522_.jpg">
       </div>
       <div class="flex column" onclick="currentSlide(4)">
-        <img src="https://images-na.ssl-images-amazon.com/images/I/810ngHHl63L._SX522_.jpg">
+        <img src="https://images-na.ssl-images-amazon.com/images/I/A185AKfrliL._SX522_.jpg">
       </div>
       <div class="flex column" onclick="currentSlide(5)">
         <img src="https://images-na.ssl-images-amazon.com/images/I/61VYkz33WNL._SX522_.jpg">
       </div>
       <div class="flex column" onclick="currentSlide(6)">
-        <img src="https://www.uncommongoods.com/images/items/23900/23960_1_640px.jpg">
-      </div>
-      <div class="flex column" onclick="currentSlide(1)">
-        <img src="https://images-na.ssl-images-amazon.com/images/I/616sJVZ0ixL._SX679_.jpg">
-      </div>
-      <div class="flex column" onclick="currentSlide(2)">
-        <img src="https://www.skyfloatx.com/uploads/1/2/4/6/124665177/2_2_orig.jpg">
-      </div>
-      <div class="flex column" onclick="currentSlide(3)">
-        <img src="https://images-na.ssl-images-amazon.com/images/I/71ld5uSFhQL._SX522_.jpg">
-      </div>
-      <div class="flex column" onclick="currentSlide(4)">
-        <img src="https://images-na.ssl-images-amazon.com/images/I/810ngHHl63L._SX522_.jpg">
-      </div>
-      <div class="flex column" onclick="currentSlide(5)">
-        <img src="https://images-na.ssl-images-amazon.com/images/I/61VYkz33WNL._SX522_.jpg">
-      </div>
-      <div class="flex column" onclick="currentSlide(6)">
-        <img src="https://www.uncommongoods.com/images/items/23900/23960_1_640px.jpg">
+        <img src="https://images-na.ssl-images-amazon.com/images/I/71uX2g5BzvL._SX522_.jpg">
       </div>
     </div><!--./show_wrap-->
 
     <div id="myModal" class="modal">
+      <div class="wrap">
       <div class="modal-content">
         <span class="close">&times;</span> <!--close button--> 
 
-        <div class="flex slides claerfix">
+        <div class="flex slides">
           <div class="numbering">1 / 6</div>
-          <div class="img_box">
-           <a target="_blank" href="#n"><img src="https://images-na.ssl-images-amazon.com/images/I/616sJVZ0ixL._SX679_.jpg"></a>
-          </div>
-          <div class="inner">
-            <h2>But I must explain to you how all this mistaken idea of denouncing pleasure</h2>
-            <strong>BY AMAZON</strong>
-            <em>$100.00</em>
-            <p>$70.00 (30% OFF)</p>
-            <a href="#n">Check it Out at <span>Amazon</span></a>
+          <div class="inner_wrap">
+            <div class="img_box">
+             <a target="_blank" href="#n"><img src="https://images-na.ssl-images-amazon.com/images/I/616sJVZ0ixL._SX679_.jpg"></a>
+            </div>
+            <div class="inner">
+              <h2>But I must explain to you how all this mistaken idea of denouncing pleasure</h2>
+              <strong>BY AMAZON</strong>
+              <em>$100.00</em>
+              <p>$70.00 (30% OFF)</p>
+              <a href="#n">Check it Out at <span>Amazon</span></a>
+            </div>
           </div>
         </div>
 
         <div class="flex slides">
+          <div class="numbering">2 / 6</div>
+          <div class="inner_wrap">
+            <div class="img_box">
+             <a target="_blank" href="#n"><img src="https://images-na.ssl-images-amazon.com/images/I/61WhgoU4LzL._SX679_.jpg"></a>
+            </div>
+            <div class="inner">
+              <h2>But I must explain to you how all this mistaken idea of denouncing pleasure</h2>
+              <strong>BY AMAZON</strong>
+              <em>$100.00</em>
+              <p>$70.00 (30% OFF)</p>
+              <a href="#n">Check it Out at <span>Amazon</span></a>
+            </div>
+          </div>
+        </div>
+
+        <div class="flex slides">
+          <div class="numbering">3 / 6</div>
+          <div class="inner_wrap">
+            <div class="img_box">
+             <a target="_blank" href="#n"><img src="https://images-na.ssl-images-amazon.com/images/I/71ld5uSFhQL._SX522_.jpg"></a>
+            </div>
+            <div class="inner">
+              <h2>But I must explain to you how all this mistaken idea of denouncing pleasure</h2>
+              <strong>BY AMAZON</strong>
+              <em>$100.00</em>
+              <p>$70.00 (30% OFF)</p>
+              <a href="#n">Check it Out at <span>Amazon</span></a>
+            </div>
+          </div>
+        </div>
+
+        <div class="flex slides">
+          <div class="numbering">4 / 6</div>
+          <div class="inner_wrap">
+            <div class="img_box">
+             <a target="_blank" href="#n"><img src="https://images-na.ssl-images-amazon.com/images/I/A185AKfrliL._SX522_.jpg"></a>
+            </div>
+            <div class="inner">
+              <h2>But I must explain to you how all this mistaken idea of denouncing pleasure</h2>
+              <strong>BY AMAZON</strong>
+              <em>$100.00</em>
+              <p>$70.00 (30% OFF)</p>
+              <a href="#n">Check it Out at <span>Amazon</span></a>
+            </div>
+          </div>
+        </div>
+
+        <div class="flex slides">
+          <div class="numbering">5 / 6</div>
+          <div class="inner_wrap">
+            <div class="img_box">
+             <a target="_blank" href="#n"><img src="https://images-na.ssl-images-amazon.com/images/I/61VYkz33WNL._SX522_.jpg"></a>
+            </div>
+            <div class="inner">
+              <h2>But I must explain to you how all this mistaken idea of denouncing pleasure</h2>
+              <strong>BY AMAZON</strong>
+              <em>$100.00</em>
+              <p>$70.00 (30% OFF)</p>
+              <a href="#n">Check it Out at <span>Amazon</span></a>
+            </div>
+          </div>
+        </div>
+
+        <div class="flex slides">
+          <div class="numbering">5 / 6</div>
+          <div class="inner_wrap">
+            <div class="img_box">
+             <a target="_blank" href="#n"><img src="https://images-na.ssl-images-amazon.com/images/I/71uX2g5BzvL._SX522_.jpg"></a>
+            </div>
+            <div class="inner">
+              <h2>But I must explain to you how all this mistaken idea of denouncing pleasure</h2>
+              <strong>BY AMAZON</strong>
+              <em>$100.00</em>
+              <p>$70.00 (30% OFF)</p>
+              <a href="#n">Check it Out at <span>Amazon</span></a>
+            </div>
+          </div>
+        </div>
+
+        <div class="flex slides">
+          <div class="numbering">6 / 6</div>
+          <div class="inner_wrap">
+            <div class="img_box">
+             <a target="_blank" href="#n"><img src="https://images-na.ssl-images-amazon.com/images/I/616sJVZ0ixL._SX679_.jpg"></a>
+            </div>
+            <div class="inner">
+              <h2>But I must explain to you how all this mistaken idea of denouncing pleasure</h2>
+              <strong>BY AMAZON</strong>
+              <em>$100.00</em>
+              <p>$70.00 (30% OFF)</p>
+              <a href="#n">Check it Out at <span>Amazon</span></a>
+            </div>
+          </div>
+        </div>
+
+        <!-- <div class="flex slides">
           <div class="numbering">2 / 6</div>
           <div class="img_box">
            <img src="https://www.skyfloatx.com/uploads/1/2/4/6/124665177/2_2_orig.jpg">
@@ -141,12 +222,13 @@
             <p>$70.00 (30% OFF)</p>
             <span>Check it Out at <a href="#n"> Amazon</a></span>
           </div>
-        </div>
+        </div> -->
 
         <a class="prev" onclick="changeSlide(-1)">&#10094;</a>
         <a class="next" onclick="changeSlide(1)">&#10095;</a>
 
       </div><!--./modal-content-->
+      </div><!--./wrap->
     </div><!--./modal-->
   </div><!--./guide_show-->
  </div><!--./wrap-->
