--- a/app/assets/stylesheets/featured.css
+++ b/app/assets/stylesheets/featured.css
@@ -287,8 +287,7 @@
   .guide_show .prev, .guide_show .next{margin:60% -8% 0 -8%;}
 }
 @media screen and (min-width:641px) and (max-width:1199px){
- 
- 
+ .guide_show .prev, .guide_show .next{margin:30% -8% 0 -8%;}
 }
 
 
