--- a/app/assets/stylesheets/featured.css
+++ b/app/assets/stylesheets/featured.css
@@ -198,6 +198,7 @@
 }
 /* End Featured Detail Page */
 
+
 /* Begin Gift Guide Main Page */
 .guide_wrap{margin:30px 0 0 0;} 
 .guide_wrap .guide_box{float:left;width:31.33%;margin:0 1% 70px 1%;}
@@ -220,10 +221,7 @@
 }
 /* End Gift Guide Main Page */
 
-
-
-
-/* For .gift_guide_03.html.erb */
+/* For .gift_guide_show */
 .guide_header{margin:120px 0 50px 0;font-family: 'Montserrat', sans-serif;}
 .guide_header h2{font-size:50px;width:50%;line-height:1.3;border-top:2px solid;border-bottom:2px solid;padding: 10px 0;}
 .guide_show{font-family: 'Montserrat', sans-serif;}
@@ -287,54 +285,13 @@
   .guide_show .prev, .guide_show .next{margin:60% -8% 0 -8%;}
 }
 @media screen and (min-width:641px) and (max-width:1199px){
+ .guide_header{margin:80px 0 30px 0;}
+ .guide_header h2{font-size:40px;width:60%;}
+ .guide_show .column{float:left;width:31%;}
+ .guide_show .column:hover{box-shadow:0,0,0;}
+ .guide_show .column img{height:250px;}
  .guide_show .prev, .guide_show .next{margin:30% -8% 0 -8%;}
 }
-
-
-
-/* Begin Gift Guide Detail Page */
-.giftail{margin-top:40px;font-family: 'Montserrat', sans-serif;}
-.giftail .card_wrap .inner_wrap{margin:0 0 30px 0;}
-.giftail .card_wrap{column-width:290px;column-gap:15px;}
-.giftail .card_wrap .card{display:inline-block;margin:0 0 30px 0;font-family: 'Montserrat', sans-serif;padding:20px 20px 0 20px;border-bottom:1px solid #ccc;}
-.giftail .card_wrap .inner_wrap .inner{border-top:2px solid;border-bottom:2px solid;padding-bottom:20px;text-align:right;line-height:1.3;}
-.giftail .card_wrap .inner_wrap .inner strong{font-size:55px;font-weight:bold;color:#000;}
-.giftail .card_wrap .card .mid_image{margin:5px 0 10px 0;}
-.giftail .card_wrap .card .mid_image img{width:100%;}
-/*.giftail .card_wrap .card .mid_image img{width:100%;-webkit-filter:grayscale(100%);filter:gray;}
-.giftail .card_wrap .card .mid_image img:hover{-webkit-filter:grayscale(0%);filter:none;}*/
-/*.giftail .card_wrap .card p{margin-bottom:5px;border-bottom:1px solid #ccc;padding-bottom:5px;}*/
-.giftail .card_wrap .card p a{text-decoration:none;color:#3d3d3d;font-size:25px;line-height:1.2;}
-.giftail .card_wrap .card span{display:block;color:#ccc;}
-.giftail .card_wrap .card .pricing{margin:20px 0;font-size:20px;}
-.giftail .card_wrap .card>.pricing>em{text-decoration:line-through;}
-.giftail .card_wrap .card>.pricing>p{}
-.giftail .card_wrap .card .btn{margin:5px 0;display:inline-block;}
-.giftail .card_wrap .card .btn>em{float:left;font-size:13px;background:#000;color:#fff;padding:3px 20px;border:1px solid #000;line-height:20px;}
-.giftail .card_wrap .card .btn>a{float:left;text-decoration:none;color:#000;font-size:13px;border:1px solid #000;padding:3px 20px;line-height:20px;}
-
-@media screen and (max-width:640px){
-  .giftail{margin-top:100px;}
-  .giftail .card_wrap{float:none;width:100%;margin:0;}
-  .giftail .card_wrap .inner_wrap{margin-bottom:15px;}
-  .giftail .card_wrap .inner_wrap .inner{padding:3px;text-align:center;}
-  .giftail .card_wrap .inner_wrap .inner strong{font-size:20px;font-weight:500;display:inline-block;}
-  .giftail .card_wrap .card{margin-bottom:20px;}
-  .giftail .card_wrap .card em{border-bottom:1px solid #3d3d3d;color:#3d3d3d;background:none;}
-  .giftail .card_wrap .card .mid_image{margin:5px 0 10px 0;}
-  .giftail .card_wrap .card .mid_image img{filter:none;}
-  .giftail .right{float:none;width:100%;margin:0;}
-}
-
-@media screen and (min-width:641px) and (max-width:1199px){
-  .giftail{margin-top:20px;}
-  .giftail .card_wrap .card .mid_image img{filter:none;}
-  .giftail .card_wrap .card em{border-bottom:1px solid #3d3d3d;color:#3d3d3d;background:none;}
-  .giftail .card_wrap .card .btn>em,
-  .giftail .card_wrap .card .btn>a{font-size:12px;}
-}
-/* End Gift Guide Detail Page */
-
 
 /* Begin Editor's Pick Main Page */
 .editor{margin:30px 0 0 0;} 
