--- a/app/views/guides/gift_guide_01.html.erb
+++ b/app/views/guides/gift_guide_01.html.erb
@@ -49,7 +49,7 @@
              <a target="_blank" href="#n"><img src="https://images-na.ssl-images-amazon.com/images/I/616sJVZ0ixL._SX679_.jpg"></a>
             </div>
             <div class="inner">
-              <h2>But I must explain to you how all this mistaken idea of denouncing pleasure</h2>
+              <h2>The Original As Seen on TV Handsfree Easy Jar Opener</h2>
               <strong>BY AMAZON</strong>
               <em>$100.00</em>
               <p>$70.00 (30% OFF)</p>
@@ -65,7 +65,7 @@
              <a target="_blank" href="#n"><img src="https://images-na.ssl-images-amazon.com/images/I/61WhgoU4LzL._SX679_.jpg"></a>
             </div>
             <div class="inner">
-              <h2>But I must explain to you how all this mistaken idea of denouncing pleasure</h2>
+              <h2>Modern Digital Mechanical Retro Flip Dоwn Clock</h2>
               <strong>BY AMAZON</strong>
               <em>$100.00</em>
               <p>$70.00 (30% OFF)</p>
@@ -81,7 +81,7 @@
              <a target="_blank" href="#n"><img src="https://images-na.ssl-images-amazon.com/images/I/71ld5uSFhQL._SX522_.jpg"></a>
             </div>
             <div class="inner">
-              <h2>But I must explain to you how all this mistaken idea of denouncing pleasure</h2>
+              <h2>Emoji Bluetooth Speaker</h2>
               <strong>BY AMAZON</strong>
               <em>$100.00</em>
               <p>$70.00 (30% OFF)</p>
@@ -97,7 +97,7 @@
              <a target="_blank" href="#n"><img src="https://images-na.ssl-images-amazon.com/images/I/A185AKfrliL._SX522_.jpg"></a>
             </div>
             <div class="inner">
-              <h2>But I must explain to you how all this mistaken idea of denouncing pleasure</h2>
+              <h2>Lotsen Multi-Room Wireless and Bluetooth Connected Speaker</h2>
               <strong>BY AMAZON</strong>
               <em>$100.00</em>
               <p>$70.00 (30% OFF)</p>
@@ -113,7 +113,7 @@
              <a target="_blank" href="#n"><img src="https://images-na.ssl-images-amazon.com/images/I/61VYkz33WNL._SX522_.jpg"></a>
             </div>
             <div class="inner">
-              <h2>But I must explain to you how all this mistaken idea of denouncing pleasure</h2>
+              <h2>Onyx Studio 5 Bluetooth Wireless Speaker</h2>
               <strong>BY AMAZON</strong>
               <em>$100.00</em>
               <p>$70.00 (30% OFF)</p>
@@ -129,7 +129,7 @@
              <a target="_blank" href="#n"><img src="https://images-na.ssl-images-amazon.com/images/I/71uX2g5BzvL._SX522_.jpg"></a>
             </div>
             <div class="inner">
-              <h2>But I must explain to you how all this mistaken idea of denouncing pleasure</h2>
+              <h2>Scroll Premium Portable Bluetooth Wireless Speaker</h2>
               <strong>BY AMAZON</strong>
               <em>$100.00</em>
               <p>$70.00 (30% OFF)</p>
