--- a/app/assets/stylesheets/featured.css
+++ b/app/assets/stylesheets/featured.css
@@ -222,51 +222,40 @@
 /* End Gift Guide Main Page */
 
 /* For .gift_guide_show */
-.guide_header{margin:120px 0 50px 0;font-family: 'Montserrat', sans-serif;}
-.guide_header h2{font-size:50px;width:50%;line-height:1.3;border-top:2px solid;border-bottom:2px solid;padding: 10px 0;}
+.guide_header{margin:120px 0 50px 0;font-family:'Montserrat', sans-serif;}
+.guide_header h2{font-size:50px;width:50%;line-height:1.3;border-top:2px solid;border-bottom:2px solid;padding:10px 0;font-weight:900;}
 .guide_show{font-family: 'Montserrat', sans-serif;}
 .guide_show .group:before,
 .guide_show .group:after{content:'';display:block;}
 .guide_show .group:after{clear:both;}
-/*.guide_show .flex{display:flex;align-items:center;justify-content:center;}
-.guide_show .guide_show_wrap{flex-wrap:wrap;}*/
 .guide_show .column{float:left;width:23%;margin:1%;transition:0.3s;}
 .guide_show .column:hover{box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.2), 0 2px 10px 0 rgba(0, 0, 0, 0.2); cursor: pointer; }
-.guide_show .column img{width:100%;height:260px;object-fit:cover;}
-/* The Modal (background) */
+.guide_show .column img{width:100%;height:260px;object-fit:cover;box-shadow:0 4px 11px 0 rgba(221,221,221,.5)}
 .guide_show .modal{overflow:scroll;background-color: white;position: fixed;left: 0;top: -500%; height: 100%;width: 100%;transition: top 0.6s ease-in-out;}
-/*Display Modal Content when clicking on either <img> or div.column*/
 .guide_show .show{top:0;}
-/* Modal Content */
 .guide_show .modal-content{height: 100%; width: 90%;margin: 120px auto 0 auto;padding: 0;position: relative;}
-/* The Close Button */
 .guide_show .close {color: black;font-size: 35px;font-weight: bold;position: absolute;top: 0;right: 10px; z-index: 2; }
 .guide_show .close:hover,
 .guide_show .close:focus {color: #999;cursor: pointer;text-decoration: none;}
-.guide_show .slides {height: 100%; width: 100%; position: absolute;left: 0; right: 0; transition: opacity 0.9s; z-index: 1;}
+.guide_show .slides {height:100%;width:100%;position:absolute;left:0;right:0;z-index: 1;}
 .guide_show .slides .inner_wrap{margin-top:270px;}
 .guide_show .slides .inner_wrap .img_box{float:left;width:45%;height:300px;margin:-150px 3% 0 2%}
 .guide_show .slides .inner_wrap .img_box img{width:100%;height:100%;object-fit:contain;}
 .guide_show .slides .inner_wrap .inner{float:left;width:46%;margin-top:-150px;}
-.guide_show .slides .inner_wrap .inner h2{line-height:1.2;font-weight:300;}
+.guide_show .slides .inner_wrap .inner h2{line-height:1.2;font-weight:300;font-weight:900;}
 .guide_show .slides .inner_wrap .inner strong{font-size:14px;color:#ccc;font-weight:100;}
 .guide_show .slides .inner_wrap .inner em{display:block;margin-top:20px;font-weight:bold;font-size:20px;text-decoration:line-through;}
 .guide_show .slides .inner_wrap .inner p{font-weight:bold;font-size:20px;display:block;margin-bottom:50px;}
 .guide_show .slides .inner_wrap .inner a {text-decoration:none;background:#000;color:#fff;padding:20px 40px;margin-top:30px;font-weight:bold;}
 .guide_show .slides .inner_wrap .inner a span{color:#08f;margin-left:5px;}
-/*In next/previous slides, we change opacity*/
 .guide_show .hide {opacity: 0; z-index: -1;}
 .guide_show .pop {opacity: 1; z-index: 1;}
 .guide_show .cursor {cursor: pointer}
-/* Next & previous buttons */
 .guide_show .prev,
-.guide_show .next{background-color: rgba(0,0,0,0.4);  color: white; cursor: pointer;position: absolute;margin-top:20%;padding: 16px;font-weight: 700;font-size: 20px;transition: 0.6s ease;border-radius: 0 3px 3px 0;user-select: none;-webkit-user-select: none;z-index: 1;}
-/* Position the "next button" to the right */
-.guide_show .next {right: 0;border-radius: 3px 0 0 3px;}
-/* On hover, add a black background color with a little bit see-through */
+.guide_show .next{background-color:rgba(0,0,0,0.4);color:white;cursor:pointer;position:absolute;margin-top:20%;padding:16px;font-weight:700;font-size:20px;transition: 0.6s ease;user-select:none;-webkit-user-select:none;z-index:1;}
+.guide_show .next{right:0;}
 .guide_show .prev:hover,
 .guide_show .next:hover {background-color: rgba(0,0,0,0.9);}
-/* Number text (1/3 etc) */
 .guide_show .numbering {color: black;font-size: 18px;padding: 8px 12px;position: absolute;top: 0; width: 100%; text-align: center;}
 
 @media screen and (max-width:640px){
