--- a/app/views/deals/_body_bestdeals.html.erb
+++ b/app/views/deals/_body_bestdeals.html.erb
@@ -102,6 +102,222 @@
 </div> 
 -->
 
+<div class="card clearfix" data-score="40" data-price="29.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2IhRoCc"><img src="https://images-na.ssl-images-amazon.com/images/I/61OtRAPGM6L._SX522_.jpg" alt="Echo Dot" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2IhRoCc">Echo Dot (3rd Gen) - Smart speaker with Alexa - Charcoal</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$29.99</span><span class="ori_price">$49.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2IhRoCc">Shop Now at Amazon</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="43" data-price="19.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2MPss9o"><img src="https://images-na.ssl-images-amazon.com/images/I/61EXogR8qJL._SX522_.jpg" alt="Echo Input" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>43% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2MPss9o">Echo Input – Bring Alexa to your own speaker- Black</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$19.99</span><span class="ori_price">$34.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2MPss9o">Shop Now at Amazon</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="35" data-price="70.85">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Ih55Bs"><img src="https://images-na.ssl-images-amazon.com/images/I/71KKM92GkzL._SX522_.jpg" alt="Timbuk2 Armory Pack" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>35% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Ih55Bs">Timbuk2 Armory Pack</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$70.85</span><span class="ori_price">$109.00</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2Ih55Bs">Shop Now at Amazon</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="70" data-price="4.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/31zNegJ"><img src="https://images-na.ssl-images-amazon.com/images/I/61EUa0WpDlL._SX522_.jpg" alt="SanDisk 16GB" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>70% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/31zNegJ">SanDisk 16GB 2.0 Flash Cruzer Glide USB Drive</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$4.99</span><span class="ori_price">$16.60</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/31zNegJ">Shop Now at Amazon</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="69" data-price="21.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2KTdoFg"><img src="https://images-na.ssl-images-amazon.com/images/I/71wOQsZqwKL._SX679_.jpg" alt="Gaming Headset" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>69% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2KTdoFg">Sades Wired 3.5mm Stereo Universal Gaming Headset with Microphone (SA708 GT) - Black/Blue</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$21.99</span><span class="ori_price">$69.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2KTdoFg">Shop Now at Amazon</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="51" data-price="98.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/31BZtcL"><img src="https://images-na.ssl-images-amazon.com/images/I/81KrFj4SBdL._SY879_.jpg" alt="Shure SE215-CL Sound Isolating Earphones" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>51% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/31BZtcL">Shure SE215-CL Sound Isolating Earphones with Single Dynamic MicroDriver</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$98.99</span><span class="ori_price">$199.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/31BZtcL">Shop Now at Amazon</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="69" data-price="39.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2KodV2y"><img src="https://images-na.ssl-images-amazon.com/images/I/61iF94hE2fL._SL1500_.jpg" alt="Scotch PRO Thermal Laminator" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>69% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2KodV2y">Scotch PRO Thermal Laminator, Never Jam Technology Automatically Prevents Misfed Items , 2 Roller System</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$39.99</span><span class="ori_price">$128.93</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2KodV2y">Shop Now at Amazon</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="14.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Xg9Bs6"><img src="https://images-na.ssl-images-amazon.com/images/I/71HeErTVOxL._SY879_.jpg" alt="Bathroom Shelf" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Xg9Bs6">Organize It All 1753W-B Wall Mount 2 Tier Chrome Bathroom Shelf with Towel Bars Metallic</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$14.99</span><span class="ori_price">$30.02</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2Xg9Bs6">Shop Now at Amazon</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="497.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2WIWgEg"><img src="https://images-na.ssl-images-amazon.com/images/I/81BCS8w0v9L._SL1500_.jpg" alt="PANASONIC LUMIX GX85 4K Digital Camera" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2WIWgEg">PANASONIC LUMIX GX85 4K Digital Camera, 12-32mm and 45-150mm Lens Bundle, 16 Megapixel Mirrorless Camera Kit</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$497.99</span><span class="ori_price">$999.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2WIWgEg">Shop Now at Amazon</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="22" data-price="195.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2XhRx0W"><img src="https://images-na.ssl-images-amazon.com/images/I/61aazm1BzHL._SX522_.jpg" alt="Emeril Lagasse Power Air Fryer" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>22% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2XhRx0W">Emeril Lagasse Power Air Fryer 360 Better Than Convection Ovens | Hot Air Fryer Oven, Toaster Oven, Bake, Broil, Slow Cook & More Food Dehydrator,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$195.99</span><span class="ori_price">$250.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2XhRx0W">Shop Now at Amazon</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="28" data-price="17.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/31KmmuC"><img src="https://images-na.ssl-images-amazon.com/images/I/71uQWuQVdLL._SX522_.jpg" alt="UBeesize Tripod S" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>28% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/31KmmuC">UBeesize Tripod S, Premium Phone Tripod, Flexible Tripod with Wireless Remote Shutter, Compatible with iPhone/Android Samsung, Mini Tripod Stand Holde
+</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$17.99</span><span class="ori_price">$24.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/31KmmuC">Shop Now at Amazon</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="33" data-price="9.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2MQ23IR"><img src="https://images-na.ssl-images-amazon.com/images/I/51xIplazaeL.jpg" alt="Pooch Selfie" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>33% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2MQ23IR">Pooch Selfie: The Original Dog Selfie Stick (AS SEEN ON Shark Tank)</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$9.99</span><span class="ori_price">$14.95</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2MQ23IR">Shop Now at Amazon</a>
+  </div>
+</div>
 
 <div class="card clearfix" data-score="50" data-price="discounted_price">
   <div class="image_box">
