--- a/app/views/guides/gift_guide_01.html.erb
+++ b/app/views/guides/gift_guide_01.html.erb
@@ -42,7 +42,7 @@
       <div class="modal-content">
         <span class="close">&times;</span> <!--close button--> 
 
-        <div class="flex slides">
+        <div class="flex slides clearfix">
           <div class="numbering">1 / 6</div>
           <div class="inner_wrap">
             <div class="img_box">
@@ -58,7 +58,7 @@
           </div>
         </div>
 
-        <div class="flex slides">
+        <div class="flex slides clearfix">
           <div class="numbering">2 / 6</div>
           <div class="inner_wrap">
             <div class="img_box">
@@ -74,7 +74,7 @@
           </div>
         </div>
 
-        <div class="flex slides">
+        <div class="flex slides clearfix">
           <div class="numbering">3 / 6</div>
           <div class="inner_wrap">
             <div class="img_box">
@@ -90,7 +90,7 @@
           </div>
         </div>
 
-        <div class="flex slides">
+        <div class="flex slides clearfix">
           <div class="numbering">4 / 6</div>
           <div class="inner_wrap">
             <div class="img_box">
@@ -106,7 +106,7 @@
           </div>
         </div>
 
-        <div class="flex slides">
+        <div class="flex slides clearfix">
           <div class="numbering">5 / 6</div>
           <div class="inner_wrap">
             <div class="img_box">
@@ -122,7 +122,7 @@
           </div>
         </div>
 
-        <div class="flex slides">
+        <div class="flex slides clearfix">
           <div class="numbering">5 / 6</div>
           <div class="inner_wrap">
             <div class="img_box">
@@ -138,7 +138,7 @@
           </div>
         </div>
 
-        <div class="flex slides">
+        <div class="flex slides clearfix">
           <div class="numbering">6 / 6</div>
           <div class="inner_wrap">
             <div class="img_box">
@@ -154,7 +154,7 @@
           </div>
         </div>
 
-        <!-- <div class="flex slides">
+        <!-- <div class="flex slides clearfix">
           <div class="numbering">2 / 6</div>
           <div class="img_box">
            <img src="https://www.skyfloatx.com/uploads/1/2/4/6/124665177/2_2_orig.jpg">
@@ -168,7 +168,7 @@
           </div>
         </div>
 
-        <div class="flex slides">
+        <div class="flex slides clearfix">
           <div class="numbering">3 / 6</div>
           <div class="img_box">
            <img src="https://images-na.ssl-images-amazon.com/images/I/71ld5uSFhQL._SX522_.jpg">
@@ -182,7 +182,7 @@
           </div>
         </div>
         
-        <div class="flex slides">
+        <div class="flex slides clearfix">
           <div class="numbering">4 / 6</div>
           <div class="img_box">
            <img src="https://images-na.ssl-images-amazon.com/images/I/810ngHHl63L._SX522_.jpg">
@@ -196,7 +196,7 @@
           </div>
         </div>
 
-        <div class="flex slides">
+        <div class="flex slides clearfix">
           <div class="numbering">5 / 6</div>
           <div class="img_box">
            <img src="https://images-na.ssl-images-amazon.com/images/I/61VYkz33WNL._SX522_.jpg">
@@ -210,7 +210,7 @@
           </div>
         </div>
 
-        <div class="flex slides">
+        <div class="flex slides clearfix">
           <div class="numbering">6 / 6</div>
           <div class="img_box">
            <img src="https://www.uncommongoods.com/images/items/23900/23960_1_640px.jpg">
