--- a/app/assets/stylesheets/featured.css
+++ b/app/assets/stylesheets/featured.css
@@ -233,8 +233,8 @@
 .guide_show .column img{width:100%;height:260px;object-fit:cover;box-shadow:0 4px 11px 0 rgba(221,221,221,.5)}
 .guide_show .modal{overflow:scroll;background-color: white;position: fixed;left: 0;top: -500%; height: 100%;width: 100%;transition: top 0.6s ease-in-out;}
 .guide_show .show{top:0;}
-.guide_show .modal-content{height: 100%; width: 90%;margin: 120px auto 0 auto;padding: 0;position: relative;}
-.guide_show .close {color: black;font-size: 35px;font-weight: bold;position: absolute;top: 0;right: 10px; z-index: 2; }
+.guide_show .modal-content{height: 100%; width: 90%;margin: 120px auto 0 auto;padding: 0;position:relative;}
+.guide_show .close {color:black;font-size:60px;font-weight:bold;position:absolute;top:0;right:10px;z-index:2;}
 .guide_show .close:hover,
 .guide_show .close:focus {color: #999;cursor: pointer;text-decoration: none;}
 .guide_show .slides {height:100%;width:100%;position:absolute;left:0;right:0;z-index: 1;}
@@ -265,6 +265,7 @@
   .guide_show .column{width:48%;box-shadow:-1px 6px 8px rgba(0, 0, 0, 0.1)}
   .guide_show .column:hover{box-shadow: 0 0 0;}
   .guide_show .column img{width:100%;height:150px;object-fit:cover;border-radius:10px;}
+  .guide_show .close{right:-20px;}
   .guide_show .modal-content{margin:50px auto 0 auto;}
   .guide_show .slides .inner_wrap .img_box{float:none;width:100%;height:auto;margin:0;margin-top:-200px;}
   .guide_show .slides .inner_wrap .inner{float:none;width:100%;margin-top:20px;}
@@ -279,6 +280,7 @@
  .guide_show .column{float:left;width:31%;}
  .guide_show .column:hover{box-shadow:0,0,0;}
  .guide_show .column img{height:250px;}
+ .guide_show .close{right:-40px;}
  .guide_show .prev, .guide_show .next{margin:30% -8% 0 -8%;}
 }
 
