--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -55,7 +55,7 @@
   .codes .card_wrap .card .inner>em{display:block;margin-right:5px;}
   .codes .card_wrap .card .inner>em>span{font-size:15px;color:#ccc;text-decoration:line-through;margin-left:5px;}
   .codes .card_wrap .card .inner>.code_high>address{display:block;}
-  .codes .card_wrap .card .inner>.code_high>address>.dis_price{color:#08f;font-size:25px;margin-right:5px;}
+  .codes .card_wrap .card .inner>.code_high>address>.dis_price{color:#08f;font-size:25px;margin-right:5px;font-weight:700;}
   .codes .card_wrap .card .inner>.code_high>address>.bestdeals{color:#87c442;}
   .codes .card_wrap .card .inner>.code_high>address>.ori_price{color:#616161;font-size:15px;text-decoration:line-through;}
   .codes .card_wrap .card .inner>.code_high>address>.tooltip_red{margin-left:10px;position:relative;display:inline;background:#ff4d4d;color:#fff;padding:0 10px;border-radius:10px;}
